--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -8,6 +8,7 @@
 body {
     padding: 15px;
     text-align: center;
+    color: #000;
 }
 
 h1 {
@@ -23,7 +24,55 @@ section {
 .card {
     border: 1px solid black;
     margin: 1rem;
+}
+
+.cardtitle {
+    position: relative;
+    margin-bottom: 2.5em;
+}
+
+.cardtitle h2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    padding: .25em 
+}
+
+.card p {
     padding: 1em;
+    text-align: left;
+}
+
+#sushi h2 {
+    background-color: #e5d198;
+
+}
+
+#beef h2 {
+    background-color: #c14543;
+    color: #fefefe;
+}
+
+#chicken h2 {
+    background-color: #d59898;
+    color: #000;
+}
+
+#sushi {
+    background-color: #8FD5A6;
+}
+
+#beef {
+    background-color: #FFFCF7;
+
+}
+
+#chicken {
+    background-color: #2274A5;
+    color: #fff;
+
 }
 
 /* Mini-library styling from lecture with some added bits */
